--- a/src/styles/prueba.module.css
+++ b/src/styles/prueba.module.css
@@ -10,3 +10,18 @@ body{
     align-items: center;
     flex-direction: column;
 }
+
+.form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: .5px solid azure;
+    border-radius: 15px;
+    padding: 4rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.form input,a,button{
+    margin: 10px;
+}
